2009-12-01  Jason Merrill  <jason@redhat.com>

	PR c++/41611
	* decl2.c (get_guard): Copy DECL_COMDAT.
	(comdat_linkage): Set DECL_COMDAT unconditionally.

2009-12-01  Jakub Jelinek  <jakub@redhat.com>

	PR c++/3187
	* optimize.c (cdtor_comdat_group): New function.
	(maybe_clone_body): Also optimize DECL_COMDAT base/complete cdtors
	and in that case put also the deleting dtor in the same comdat group
	as base and complete dtor if dtor is virtual.

2009-11-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/40371
	* call.c (add_template_candidate_real): Early return NULL if
	the arglist length is smaller than skip_without_in_chrg; tidy.

2009-11-30  Dodji Seketeli  <dodji@redhat.com>

	PR c++/42069
	* pt.c (convert_template_argument): Strip typedefs from SCOPE_REFs.

2009-11-29  Dodji Seketeli  <dodji@redhat.com>

	PR c++/36408
	* semantics.c (empty_expr_stmt_p): Handle void_zero_node and fix
	bad indentation.
	* pt.c (tsubst_copy_and_build): Fix typo.

2009-11-29  Jan Hubicka  <jh@suse.cz>

	* optimize.c (maybe_clone_body): Emit thunks associated to alias.
	* Make-lang.in (method.o): Add dependency on gimple.h.
	* method.c: Include gimple.h
	(make_alias_for_thunk): Use same body alias instead of assemble_alias.
	(use_thunk): Drop codegen; use cgraph_add_thunk; gimplify
	generic thunks.
	* semantics.c (expand_or_defer_fn): Emit associated thunks.

2009-11-28  Dodji Seketeli  <dodji@redhat.com>

	PR c++/36408
	* cp-tree.h (empty_expr_stmt_p): Declare ...
	* semantics.c (empty_expr_stmt_p): ... this.
	* pt.c (tsubst_copy_and_build) <STMT_EXPR>: Use it.

2009-11-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38656
	* cxx-pretty-print.c (pp_cxx_expression): Handle TEMPLATE_ID_EXPR.

2009-11-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/35112
	* pt.c (print_overloaded_functions): New.
	(print_candidates): Call the latter.
	* parser.c (cp_parser_class_name): Do not duplicate the diagnostics
	after the cp_parser_lookup_name call.
